2008-03-11 [colin]	..cvs1

	* po/POTFILES.in
		Add new files
	* src/Makefile.am
	* src/month-view.c
		Add month view
	* src/day-view.c
		Fix some little things
	* src/vcal_folder.c
	* src/vcal_folder.h
	* src/vcal_manager.c
	* src/vcal_manager.h
	* src/vcal_prefs.c
	* src/vcal_prefs.h
	* src/vcalendar.c
		- Add a way to get internal representation of
		  ical components easily
		- Use that to implement add and update of 
		  event for Opensync
		- Use it to refactor vcalendar.c's spaghetti
		- Add a way to get internal representation of
		  subscribed feeds
		- Use that to allow week/month view on them
		- Move the view type from preferences to
		  contextual menu

2008-03-06 [colin]	1.101.0cvs4

	* src/day-view.c
	* src/plugin.c
	* src/vcal_prefs.c
		Little improvements to the new calendar view
		Require Claws Mail 3.3.1cvs16

2008-03-06 [colin]	1.101.0cvs3

	* src/day-view.c
		Remove wrongness

2008-03-06 [colin]	1.101.0cvs2

	* src/Makefile.am
	* src/day-view.c ** NEW FILE **
	* src/plugin.c
	* src/vcal_folder.c
	* src/vcal_folder.h
	* src/vcal_interface.h
	* src/vcal_meeting_gtk.c
	* src/vcal_prefs.c
	* src/vcal_prefs.h
	* src/vcalendar.c
		Add an interface for other plugins to use
		Add a calendar view, heavily based on Orage's
		day-view.c.

2008-02-09 [paul]	1.101.0cvs1

	* Makefile.am
		enter the po/ dir sooner

2008-02-08 [paul]	1.101.0

	1.101.0 released

2008-02-08 [paul]	1.100.0cvs6

	* po/es.po
	* po/fi.po
	* po/hu.po
	* po/it.po
	* po/zh_CN.po
		updated by Ricardo Mones Lastra, Flammie Pirinen,
		Pader Rezso, Andrea Spadaccini and Ralph Young

2008-01-27 [colin]	1.100.0cvs5

	* src/vcal_folder.c
		Fix crash when no connectivity is available

2008-01-22 [wwp]	1.100.0cvs4

	* src/vcal_manager.c
	* src/vcal_meeting_gtk.c
	* src/vcalendar.c
		Updated to reflect API changes (account_find_from_address()).

2008-01-21 [colin]	1.100.0cvs3

	* src/vcal_folder.c
	* src/vcalendar.c
		Fix bug 1478, 'Wrong pthread_create calls all