@@ -147,4 +147,5 @@
 ( cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/Makefile.am;  diff -u /dev/null src/day-view.c;  cvs diff -u -r 1.1.2.37 -r 1.1.2.38 src/plugin.c;  cvs diff -u -r 1.2.2.77 -r 1.2.2.78 src/vcal_folder.c;  cvs diff -u -r 1.1.2.11 -r 1.1.2.12 src/vcal_folder.h;  diff -u /dev/null src/vcal_interface.h;  cvs diff -u -r 1.1.2.73 -r 1.1.2.74 src/vcal_meeting_gtk.c;  cvs diff -u -r 1.1.2.25 -r 1.1.2.26 src/vcal_prefs.c;  cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/vcal_prefs.h;  cvs diff -u -r 1.2.2.65 -r 1.2.2.66 src/vcalendar.c;  ) > 1.101.0cvs2.patchset
 ( cvs diff -u -r 1.1.2.1 -r 1.1.2.2 src/day-view.c;  ) > 1.101.0cvs3.patchset
 ( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/day-view.c;  cvs diff -u -r 1.1.2.38 -r 1.1.2.39 src/plugin.c;  cvs diff -u -r 1.1.2.26 -r 1.1.2.27 src/vcal_prefs.c;  ) > 1.101.0cvs4.patchset
-( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 po/POTFILES.in;  cvs diff -u -r 1.1.2.11 -r 1.1.2.12 src/Makefile.am;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/day-view.c;  diff -u /dev/null src/month-view.c;  cvs diff -u -r 1.2.2.78 -r 1.2.2.79 src/vcal_folder.c;  cvs diff -u -r 1.1.2.12 -r 1.1.2.13 src/vcal_folder.h;  cvs diff -u -r 1.1.2.69 -r 1.1.2.70 src/vcal_manager.c;  cvs diff -u -r 1.1.2.13 -r 1.1.2.14 src/vcal_manager.h;  cvs diff -u -r 1.1.2.27 -r 1.1.2.28 src/vcal_prefs.c;  cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/vcal_prefs.h;  cvs diff -u -r 1.2.2.66 -r 1.2.2.67 src/vcalendar.c;  ) > ..cvs1.patchset
+( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 po/POTFILES.in;  cvs diff -u -r 1.1.2.11 -r 1.1.2.12 src/Makefile.am;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/day-view.c;  diff -u /dev/null src/month-view.c;  cvs diff -u -r 1.2.2.78 -r 1.2.2.79 src/vcal_folder.c;  cvs diff -u -r 1.1.2.12 -r 1.1.2.13 src/vcal_folder.h;  cvs diff -u -r 1.1.2.69 -r 1.1.2.70 src/vcal_manager.c;  cvs diff -u -r 1.1.2.13 -r 1.1.2.14 src/vcal_manager.h;  cvs diff -u -r 1.1.2.27 -r 1.1.2.28 src/vcal_prefs.c;  cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/vcal_prefs.h;  cvs diff -u -r 1.2.2.66 -r 1.2.2.67 src/vcalendar.c;  ) > 1.101.0cvs5.patchset
+( cvs diff -u -r 1.2.2.79 -r 1.2.2.80 src/vcal_folder.c;  cvs diff -u -r 1.1.2.28 -r 1.1.2.29 src/vcal_prefs.c;  cvs diff -u -r 1.1.2.11 -r 1.1.2.12 src/vcal_prefs.h;  ) > 1.101.0cvs6.patchset
